<resources>
    <string name="app_name">LinkedIn Clone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_sneek_peek">Connecting professionals to\nrecruiters</string>
    <string name="log_in">Log In</string>
    <string name="join_now">Join Now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_agreement_message">By clicking join now, you agree to LinkedIn User Agreement, Privacy Policy, and Cookie Policy</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="required">*Required (2 or more characters)</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">Enter your Email to reset your Password</string>
    <string name="lorem_ipsum">Lorem ipsum asdkms asdnskxms asjkdnzkx xnjs kama. dskmd</string>
    <string name="sample_header_name">John Doe</string>
    <string name="sample_job_title">UI/UX Designer at TREP LABS</string>
    <string name="sample_location">Nigeria</string>
    <string name="sample_connections">500+ connections</string>
    <string name="about">About</string>
    <string name="lorem_ipsum2">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="private_to_you">Private to you</string>
    <string name="sample_profile_views">1,208</string>
    <string name="who_viewed_your_profile">Who viewed your profile</string>
    <string name="post_views">Post Views</string>
    <string name="sample_post_views">100</string>
    <string name="sample_search_appearance">11,050</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="see_all">See All</string>
    <string name="search_appearance">Search Appearance</string>
    <string name="skills_and_endorsement">Skills and Endorsement</string>
    <string name="contact">Contact</string>
    <string name="your_profile">Your Profile</string>
    <string name="licences_and_certifications"><![CDATA[Licences & Certifications]]></string>
    <string name="edit_intro">Edit Intro</string>
    <string name="headline">Headline</string>
    <string name="add_new_education">Add New Education</string>
    <string name="country_region">Country/Region</string>
    <string name="industry">Industry</string>
    <string name="summary">Summary</string>
</resources>
