<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="authViewModel"
            type="com.app.treplabs.linkedinclone.viewmodels.AuthViewModel" />
        <variable
            name="isBtnClicked"
            type="java.lang.Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:context=".SignUpFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="179dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:errorEnabled="true"
                app:helperText="@string/required"
                app:helperTextTextAppearance="@style/TextAppearances"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPersonName"
                    android:text="@={authViewModel.mFirstName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/last_name"
                app:errorEnabled="true"
                app:helperText="@string/required"
                app:helperTextTextAppearance="@style/TextAppearances"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPersonName"
                    android:text="@={authViewModel.mLastName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/email"
                app:errorEnabled="true"
                app:helperText="*Required"
                app:helperTextTextAppearance="@style/TextAppearances"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textEmailAddress"
                    android:text="@={authViewModel.mUserEmail}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:helperText="6 or more characters"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/TextAppearances"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"
                    android:text="@={authViewModel.mUserPassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/agreement_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:lineSpacingExtra="4dp"
                android:text="@string/confirm_agreement_message"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/password_layout"
                app:layout_constraintStart_toStartOf="@+id/password_layout"
                app:layout_constraintTop_toBottomOf="@+id/password_layout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_join_now_btn"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:onClick="@{authViewModel::onJoinNowButtonClicked}"
                android:visibility="@{isBtnClicked ? View.INVISIBLE : View.VISIBLE}"
                android:text="@string/join_now"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/agreement_text" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{isBtnClicked ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@+id/register_join_now_btn"
                app:layout_constraintEnd_toEndOf="@+id/register_join_now_btn"
                app:layout_constraintStart_toStartOf="@+id/register_join_now_btn"
                app:layout_constraintTop_toTopOf="@+id/register_join_now_btn" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:visibility="@{isBtnClicked ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintEnd_toStartOf="@+id/register_log_in_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/register_join_now_btn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/register_log_in_button"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/roboto"
                android:visibility="@{isBtnClicked ? View.INVISIBLE : View.VISIBLE}"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/register_join_now_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>