<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="authViewModel"
            type="com.app.treplabs.linkedinclone.viewmodels.AuthViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".LogInFragment"
        android:background="@color/layoutBackground"
        android:scrollbars="none"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="239dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email_edit_text"
                    android:layout_width="match_parent"
                    android:text="@={authViewModel.mUserEmail}"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password_edit_text"
                    android:layout_width="match_parent"
                    android:text="@={authViewModel.mUserPassword}"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:onClick="@{authViewModel::onLoginButtonClicked}"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_layout" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dont_have_an_account"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/login_sign_up_btn"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_sign_up_btn"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTransparent"
                android:fontFamily="@font/roboto"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:elevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/login_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>